--- a/src/TransData.App/TransData.App.csproj
+++ b/src/TransData.App/TransData.App.csproj
@@ -28,5 +28,6 @@
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
